--- a/src/main/resources/com/java/Registro/Main.fxml
+++ b/src/main/resources/com/java/Registro/Main.fxml
@@ -4,19 +4,23 @@
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.java.Registro.Controller.Controller">
+<AnchorPane prefHeight="400.0" prefWidth="635.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.java.Registro.Controller.Controller">
 
-    <Button layoutX="226.0" layoutY="174.0" onAction="#seleccionarArchivo" text="Seleccionar archivo" />
-    <ImageView fx:id="pdfImageView" fitHeight="292.0" fitWidth="220.0" layoutX="373.0" layoutY="74.0" pickOnBounds="true" preserveRatio="true" />
+    <Button layoutX="239.0" layoutY="200.0" onAction="#seleccionarArchivo" text="Seleccionar archivo" />
+    <ImageView fx:id="pdfImageView" fitHeight="292.0" fitWidth="194.0" layoutX="419.0" layoutY="54.0" pickOnBounds="true" preserveRatio="true" />
     <Button layoutX="270.0" layoutY="266.0" onAction="#guardarArchivo" text="Guardar" />
-    <ComboBox fx:id="servicioComboBox" layoutX="229.0" layoutY="74.0" />
-   <Label layoutX="79.0" layoutY="78.0" text="Seleccione un Servicio" />
-   <Label layoutX="234.0" layoutY="30.0" text="REGISTRO DE FACTURAS" />
-    <RadioButton fx:id="facturaRadioButton" layoutX="224.0" layoutY="113.0" text="Factura" />
-    <RadioButton fx:id="pagoRadioButton" layoutX="224.0" layoutY="140.0" text="Comprobante de Pago" />
+    <ComboBox fx:id="servicioComboBox" layoutX="229.0" layoutY="84.0" promptText="Seleccionar Servicio" />
+   <Label fx:id="tituloSecundario" layoutX="234.0" layoutY="30.0" text="REGISTRO DE FACTURAS" />
+    <RadioButton fx:id="facturaRadioButton" layoutX="224.0" layoutY="123.0" text="Factura" />
+    <RadioButton fx:id="pagoRadioButton" layoutX="224.0" layoutY="150.0" text="Comprobante de Pago" />
+    <TextField disable="true" layoutX="234.0" layoutY="339.0" promptText="Total $234.532,64" />
+
+    <SplitPane prefHeight="400.0" prefWidth="209.0" />
 
 
 </AnchorPane>
