--- a/src/main/resources/com/java/Registro/Main.fxml
+++ b/src/main/resources/com/java/Registro/Main.fxml
@@ -6,21 +6,31 @@
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="400.0" prefWidth="635.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.java.Registro.Controller.Controller">
-
-    <Button layoutX="239.0" layoutY="200.0" onAction="#seleccionarArchivo" text="Seleccionar archivo" />
-    <ImageView fx:id="pdfImageView" fitHeight="292.0" fitWidth="194.0" layoutX="419.0" layoutY="54.0" pickOnBounds="true" preserveRatio="true" />
-    <Button layoutX="270.0" layoutY="266.0" onAction="#guardarArchivo" text="Guardar" />
-    <ComboBox fx:id="servicioComboBox" layoutX="229.0" layoutY="84.0" promptText="Seleccionar Servicio" />
-   <Label fx:id="tituloSecundario" layoutX="234.0" layoutY="30.0" text="REGISTRO DE FACTURAS" />
-    <RadioButton fx:id="facturaRadioButton" layoutX="224.0" layoutY="123.0" text="Factura" />
-    <RadioButton fx:id="pagoRadioButton" layoutX="224.0" layoutY="150.0" text="Comprobante de Pago" />
-    <TextField disable="true" layoutX="234.0" layoutY="339.0" promptText="Total $234.532,64" />
-
     <SplitPane prefHeight="400.0" prefWidth="209.0" />
+
+    <Button layoutX="240.0" layoutY="215.0" onAction="#seleccionarArchivo" text="Seleccionar archivo" />
+    <ImageView fx:id="pdfImageView" fitHeight="233.0" fitWidth="176.0" layoutX="428.0" layoutY="94.0" pickOnBounds="true" preserveRatio="true" />
+    <Button layoutX="271.0" layoutY="281.0" onAction="#guardarArchivo" text="Guardar" />
+    <ComboBox fx:id="servicioComboBox" layoutX="229.0" layoutY="84.0" promptText="Seleccionar Servicio" />
+   <Label fx:id="tituloSecundario" layoutX="234.0" layoutY="30.0" text="CARGA DE DOCUMENTOS" />
+    <RadioButton fx:id="facturaRadioButton" layoutX="225.0" layoutY="138.0" text="Factura" />
+    <RadioButton fx:id="pagoRadioButton" layoutX="225.0" layoutY="165.0" text="Comprobante de Pago" />
+    <TextField fx:id="totalTextField" disable="true" layoutX="440.0" layoutY="336.0" promptText="Total $234.532,64" />
+    <ImageView fitHeight="188.0" fitWidth="194.0" layoutX="6.0">
+
+        <Image url="@/com/java/Registro/Images/logo.png" />
+    </ImageView>
+   <Label fx:id="tituloSecundario1" layoutX="490.0" layoutY="76.0" text="Vista Previa" visible="false">
+      <font>
+         <Font size="10.0" />
+      </font>
+   </Label>
 
 
 </AnchorPane>
